tests/syntax_tests/data/parsing/errors/expressions/taggedTemplateUnclosed.res
let q = sql`SELECT * FROM users WHERE id = ${id}